Wed Mar 10 21:22:00 2004 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added ga to ALL_LINGUAS (Irish).

Tue Jan 20 15:56:30 2004  George Lebl <jirka@5z.com>

	* lib/linear_algebra/special_matrices.gel: add rotation matrices

Wed Dec 31 14:41:47 2003  George Lebl <jirka@5z.com>

	* Release 0.5.7.1

	* src/gnome-genius.c: fix spinners being too thin

Wed Dec 31 12:04:56 2003  George Lebl <jirka@5z.com>

	* Release 0.5.7

Wed Dec 31 11:40:12 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: mpwfr_pow is kind of broken in gmp 4.1.2 at least
	  (seems fixed in newer mpfr, will have to do some sort of a check
	  in the future).

	* lib/functions/elementary.gel: add ErrorFunction/erf

	* lib/functions/sums_products.gel: add InfiniteProduct and
	  InfiniteProduct2

	* src/geniustests.txt: add some tests

	* Makefile.am: add intltool-modules/XML/Parser/Style/OrigTree.pm
	  to EXTRA_DIST

	* configure.in: raise version, whack the DEPRECATED things

Fri Dec 12 10:31:55 2003  George Lebl <jirka@5z.com>

	* lib/linear_algebra/subspaces.gel,
	  lib/linear_algebra/linear_algebra.gel:  Fix Kernel([0]) (it gave
	  correct answer, but also gave errors) and do some cleanup
	  as well

Wed Oct 29 16:59:11 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: allow very very very large powers of 1,-1,1i and -1i.
	  also ui divisions should return an int if the denominator is 1

Tue Oct 28 10:15:10 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: be nicer in integer powers of pure imaginary
	  integers/rationals

Thu Oct 16 10:21:38 2003  George Lebl <jirka@5z.com>

	* Release 0.5.6

	* src/Makefile.am: fix build

2003-10-15  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

Tue Oct 07 15:08:52 2003  George Lebl <jirka@5z.com>

	* configure.in: raise version

	* configure.in, src/calc.c, src/compil.c, src/funclib.c,
	  src/gnome-genius.c, src/graphing.c:  Whack use of
	  all deprecated stuff.  Also make the graphing canvas