@@ -3,7 +3,7 @@ AC_INIT(src/calc.c)
 AC_PROG_INTLTOOL([0.21])
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(genius,0.5.7.1)
+AM_INIT_AUTOMAKE(genius,0.5.8)
 AM_MAINTAINER_MODE
 
 dnl ================= Requirements ================================================
